Fix form modal label to align left
Design specs had form modal label text to align left. Added a
css property to float the text left.

Close #297

--- a/demo/demo_app/modal_demo/error-modal.component.scss
+++ b/demo/demo_app/modal_demo/error-modal.component.scss
@@ -1,4 +1,4 @@
-.content {
+.modal-body {
   padding: 20px;
   p {
     margin: 0;
