--- a/src/core/core/_core.scss
+++ b/src/core/core/_core.scss
@@ -121,13 +121,15 @@ button{
 		height:100%;
 		width: 100%;
 		text-align: center;
-		> *{
-			margin: 0 auto;
-			text-align:inherit
-		}
 	}
 }
 
+.valign-element{
+	> *{
+		margin: 0 auto;
+		text-align:inherit
+	}
+}
 
  .badge{
 	height: 18px;
